# RuppertRefinement

./: .gitignore  CMakeLists.txt
CDT/: CMakeLists.txt
CDT/extras/: RuppertRefinement.h  SaveToOff.h
CDT/tests/: ruppert.test.cpp  ruppert_capital_a_after_double.off  ruppert_capital_a_after_float.off  ruppert_capital_a_before_double.off  ruppert_capital_a_before_float.off  ruppert_four_corner_square_after_double.off  ruppert_four_corner_square_after_float.off  ruppert_four_corner_square_before_double.off  ruppert_guitar_after_double.off  ruppert_guitar_after_float.off  ruppert_guitar_before_double.off  ruppert_guitar_before_float.off  ruppert_island_after_double.off  ruppert_island_after_float.off  ruppert_island_before_double.off  ruppert_island_before_float.off  ruppert_kidney_after_double.off  ruppert_kidney_after_float.off  ruppert_kidney_before_double.off  ruppert_kidney_before_float.off  ruppert_max_edge_length_after_float.off  ruppert_max_edge_length_before_double.off  ruppert_max_steiner_after_double.off  ruppert_max_steiner_after_float.off  ruppert_sweden_after_double.off  ruppert_sweden_after_float.off  ruppert_sweden_before_double.off  ruppert_sweden_before_float.off  ruppert_unit_square_after_double.off  ruppert_unit_square_after_float.off  ruppert_unit_square_before_float.off
CDT/tests/inputs/: face01.txt  face01_scaled.txt  face02.txt
build_check/: CMakeCache.txt
visualizer/: CMakeLists.txt  visualize_mesh.py
